dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: web-app
  template:
    metadata:
      labels:
        name: web-app
    spec:
      containers:
      - name: application
        image: 646904594762.dkr.ecr.eu-central-1.amazonaws.com/dev-ecr:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8081
