dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8081
  selector:
    name: web-app
